initiated for the web page moviesystem

--- a/moviesystem/model/dataset5/TMDBmerger5.ipynb
+++ b/moviesystem/model/dataset5/TMDBmerger5.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "(12349, 25)"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,11 +481,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
     "movie_name_processed = preprocess_text(movie_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 282,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the batman\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(movie_name_processed)"
    ]
   },
   {
@@ -497,14 +514,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index of 'avatar': 4\n"
+      "Index of 'the batman': 294\n"
      ]
     }
    ],
@@ -524,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -559,16 +576,16 @@
       "\n",
       "Movies suggested for you:\n",
       "\n",
-      "1. avatar\n",
-      "2. alien\n",
-      "3. rebel moon  part one a child of fire\n",
-      "4. soldier\n",
-      "5. planet of the apes\n",
-      "6. aliens\n",
-      "7. alien\n",
-      "8. space sweepers\n",
-      "9. the real right stuff\n",
-      "10. journey to space\n"
+      "1. the batman\n",
+      "2. batman under the red hood\n",
+      "3. batman year one\n",
+      "4. batman begins\n",
+      "5. batman hush\n",
+      "6. batman vs twoface\n",
+      "7. batman assault on arkham\n",
+      "8. batman the long halloween part one\n",
+      "9. batman return of the caped crusaders\n",
+      "10. the dark knight\n"
      ]
     }
    ],
