--- a/moviesystem/model/dataset5/TMDBmerger5.ipynb
+++ b/moviesystem/model/dataset5/TMDBmerger5.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
        "(12349, 25)"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,134 +467,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Getting the name from user"
+    "Exporting the saved and modified dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "movie_name = input(\"Enter a movie name: \").lower()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 281,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "movie_name_processed = preprocess_text(movie_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 282,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the batman\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(movie_name_processed)"
+    "movie_df.to_csv('../../TMDB_model.csv', index=False)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "getting the index of the closest matched movie"
+    "Saving the trained model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index of 'the batman': 294\n"
-     ]
-    }
-   ],
-   "source": [
-    "close_match = difflib.get_close_matches(movie_name, movie_df['title'].str.lower().tolist(),cutoff=0.6)\n",
-    "if close_match:\n",
-    "    close_match_name = close_match[0]\n",
-    "    for index, title in enumerate(movie_df['title']):\n",
-    "        if title.lower() == close_match_name:\n",
-    "            movie_index = index\n",
-    "            print(f\"Index of '{close_match_name}': {movie_df.loc[index, 'movie_id']}\")\n",
-    "            break\n",
-    "else:\n",
-    "    print(f\"No close match found for '{movie_name}'\")\n",
-    "    exit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "similarity_score = list(enumerate(similarity[movie_index]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 285,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sorted_similar_movies = sorted(similarity_score, key=lambda x: x[1], reverse=True)[:10]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Printing the suggested movies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 286,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Movies suggested for you:\n",
-      "\n",
-      "1. the batman\n",
-      "2. batman under the red hood\n",
-      "3. batman year one\n",
-      "4. batman begins\n",
-      "5. batman hush\n",
-      "6. batman vs twoface\n",
-      "7. batman assault on arkham\n",
-      "8. batman the long halloween part one\n",
-      "9. batman return of the caped crusaders\n",
-      "10. the dark knight\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('\\nMovies suggested for you:\\n')\n",
-    "for i, movie in enumerate(sorted_similar_movies, 1):\n",
-    "    index = movie[0]\n",
-    "    title_from_index = movie_df.loc[index, 'title']\n",
-    "    print(f\"{i}. {title_from_index}\")"
+    "# import pickle\n",
+    "\n",
+    "# filename='trained_TMDB.sav'\n",
+    "# pickle.dump(similarity,open(filename,'wb'))"
    ]
   }
  ],
