--- a/MCQgenerator/LLM_Model/test.ipynb
+++ b/MCQgenerator/LLM_Model/test.ipynb
@@ -479,7 +479,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "para_json=new_quiz_df.loc[0,'para'].strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'text'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[38], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpara_json\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtext\u001b[49m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'text'"
+     ]
+    }
+   ],
+   "source": [
+    "para_json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
