--- a/asktoaske/LLM_Model/test.ipynb
+++ b/asktoaske/LLM_Model/test.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.document_loaders import PyPDFDirectoryLoader\n",
+    "from langchain_community.document_loaders import PyPDFDirectoryLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain_google_genai import GoogleGenerativeAIEmbeddings\n",
     "from langchain_google_genai import ChatGoogleGenerativeAI\n",
