updated chroma db setup

--- a/MCQgenerator/LLM_Model/test.ipynb
+++ b/MCQgenerator/LLM_Model/test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,15 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0000 00:00:1721811978.679280  120000 check_gcp_environment_no_op.cc:29] ALTS: Platforms other than Linux and Windows are not supported\n",
-      "I0000 00:00:1721811978.680162  120000 check_gcp_environment_no_op.cc:29] ALTS: Platforms other than Linux and Windows are not supported\n"
+      "/Users/anuragsingh/Documents/GitHub/Mr-analyzer/analyzerenv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1736657845.868457   20137 config.cc:230] gRPC experiments enabled: call_status_override_on_cancellation, event_engine_dns, event_engine_listener, http2_stats_fix, monitoring_experiment, pick_first_new, trace_record_callops, work_serializer_clears_time_cache\n",
+      "I0000 00:00:1736657845.874189   20137 check_gcp_environment_no_op.cc:29] ALTS: Platforms other than Linux and Windows are not supported\n"
      ]
     }
    ],
@@ -55,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,16 +123,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/30/y95bh8d55nl10w9hr7kt73g00000gn/T/ipykernel_1762/3518450001.py:1: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
+      "  para_chain=LLMChain(llm=llm_model, prompt=para_generation_prompt, output_key=\"para\", verbose=False)\n"
+     ]
+    }
+   ],
    "source": [
     "para_chain=LLMChain(llm=llm_model, prompt=para_generation_prompt, output_key=\"para\", verbose=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +256,7 @@
        "'{\"1\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}, \"2\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}, \"3\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}}'"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,14 +277,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0000 00:00:1721811984.197024  120084 subchannel.cc:806] subchannel 0x102c7cd60 {address=ipv6:%5B2404:6800:4002:826::200a%5D:443, args={grpc.client_channel_factory=0x104748b70, grpc.default_authority=generativelanguage.googleapis.com:443, grpc.dns_enable_srv_queries=1, grpc.http2_scheme=https, grpc.internal.channel_credentials=0x10fe07800, grpc.internal.client_channel_call_destination=0x10df4ba18, grpc.internal.event_engine=0x102c632b0, grpc.internal.security_connector=0x102c6a0b0, grpc.internal.subchannel_pool=0x10ca87d90, grpc.max_receive_message_length=-1, grpc.max_send_message_length=-1, grpc.primary_user_agent=grpc-python/1.65.1, grpc.resource_quota=0x10ca83f40, grpc.server_uri=dns:///generativelanguage.googleapis.com:443}}: connect failed (UNKNOWN:connect: No route to host (65) {created_time:\"2024-07-24T14:36:24.196935+05:30\"}), backing off for 1000 ms\n"
+      "/var/folders/30/y95bh8d55nl10w9hr7kt73g00000gn/T/ipykernel_1762/3916710297.py:1: LangChainDeprecationWarning: The method `Chain.__call__` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "  response=generate_evaluate_chain(\n"
      ]
     },
     {
@@ -284,7 +297,11 @@
       "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
       "Prompt after formatting:\n",
       "\u001b[32;1m\u001b[1;3m\n",
-      "Text:Malaria, a deadly parasitic disease transmitted by infected female Anopheles mosquitoes, poses a significant global health threat. The parasite, Plasmodium, enters the human body and invades red blood cells, causing a range of symptoms, including fever, chills, sweating, headache, and muscle pain. If left untreated, malaria can progress to severe complications, such as cerebral malaria, which can lead to coma and death. The disease is prevalent in tropical and subtropical regions, particularly in Africa, Southeast Asia, and Latin America, and disproportionately affects vulnerable populations, including pregnant women, children, and the immunocompromised. Treatment typically involves antimalarial medications, such as artemisinin-based combination therapies, which have significantly improved survival rates. However, resistance to antimalarial drugs remains a challenge, and ongoing research focuses on developing new and effective therapies. Preventive measures, including the use of insecticide-treated mosquito nets, indoor residual spraying, and antimalarial prophylaxis, are crucial for reducing transmission and protecting individuals at risk.\n",
+      "Text:Malaria is a life-threatening parasitic disease transmitted by infected female Anopheles mosquitoes. It affects over 200 million people annually, predominantly in tropical and subtropical regions. The parasite, Plasmodium, invades red blood cells, causing symptoms that typically appear within 10-15 days after the bite. These symptoms include fever, chills, sweating, headache, muscle pain, and nausea. If left untreated, malaria can progress to severe complications such as cerebral malaria, respiratory distress, and organ failure.\n",
+      "\n",
+      "Treatment for malaria involves antimalarial medications, such as artemisinin-based combination therapies (ACTs), which are highly effective in clearing the infection. Early diagnosis and treatment are crucial to prevent severe illness and death. Prevention measures include using insecticide-treated mosquito nets, insect repellents, and antimalarial prophylaxis for travelers visiting endemic areas.\n",
+      "\n",
+      "Malaria is a significant global health concern, particularly in impoverished regions with limited access to healthcare. Ongoing research focuses on developing new antimalarial drugs, vaccines, and vector control strategies to combat the disease and reduce its impact on human health.\n",
       "You are an expert MCQ maker. Given the above text, it is your job to create a quiz of 5 multiple choice questions for the disease Maleria for creating the public awareness. \n",
       "Make sure the questions are not repeated and check all the questions to be conforming the text as well.\n",
       "Make sure to format your response like  RESPONSE_JSON below  and use it as a guide. Ensure to make 5 MCQs\n",
@@ -309,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -318,12 +335,12 @@
        "{'number': 5,\n",
        " 'disease_name': 'Maleria',\n",
        " 'response_json': '{\"1\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}, \"2\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}, \"3\": {\"mcq\": \"multiple choice question\", \"options\": {\"a\": \"choice here\", \"b\": \"choice here\", \"c\": \"choice here\", \"d\": \"choice here\"}, \"correct\": \"correct answer\"}}',\n",
-       " 'para': 'Malaria, a deadly parasitic disease transmitted by infected female Anopheles mosquitoes, poses a significant global health threat. The parasite, Plasmodium, enters the human body and invades red blood cells, causing a range of symptoms, including fever, chills, sweating, headache, and muscle pain. If left untreated, malaria can progress to severe complications, such as cerebral malaria, which can lead to coma and death. The disease is prevalent in tropical and subtropical regions, particularly in Africa, Southeast Asia, and Latin America, and disproportionately affects vulnerable populations, including pregnant women, children, and the immunocompromised. Treatment typically involves antimalarial medications, such as artemisinin-based combination therapies, which have significantly improved survival rates. However, resistance to antimalarial drugs remains a challenge, and ongoing research focuses on developing new and effective therapies. Preventive measures, including the use of insecticide-treated mosquito nets, indoor residual spraying, and antimalarial prophylaxis, are crucial for reducing transmission and protecting individuals at risk.',\n",
-       " 'quiz': '### RESPONSE_JSON\\n{\"1\": {\"mcq\": \"Which of the following is NOT a symptom of malaria?\", \"options\": {\"a\": \"Fever\", \"b\": \"Vomiting\", \"c\": \"Headache\", \"d\": \"Sweating\"}, \"correct\": \"b\"}, \"2\": {\"mcq\": \"What is the primary mode of transmission for malaria?\", \"options\": {\"a\": \"Contact with infected blood\", \"b\": \"Mosquito bites\", \"c\": \"Contaminated water\", \"d\": \"Inhalation of spores\"}, \"correct\": \"b\"}, \"3\": {\"mcq\": \"Which of the following is a preventive measure against malaria?\", \"options\": {\"a\": \"Use of mosquito nets\", \"b\": \"Vaccination\", \"c\": \"Taking antibiotics\", \"d\": \"None of the above\"}, \"correct\": \"a\"}, \"4\": {\"mcq\": \"What is the most prevalent type of malaria parasite?\", \"options\": {\"a\": \"Plasmodium falciparum\", \"b\": \"Plasmodium vivax\", \"c\": \"Plasmodium malariae\", \"d\": \"Plasmodium ovale\"}, \"correct\": \"a\"}, \"5\": {\"mcq\": \"Which region of the world is most affected by malaria?\", \"options\": {\"a\": \"North America\", \"b\": \"Europe\", \"c\": \"Tropical and subtropical regions\", \"d\": \"Antarctica\"}, \"correct\": \"c\"}}',\n",
-       " 'review': '**Quality Analysis:**\\n\\nThe quiz covers essential aspects of malaria, but some questions could be improved for clarity and public awareness.\\n\\n**Updated Quiz Questions:**\\n\\n1. **Which of the following is a common symptom of malaria?**\\n   - (a) Fever\\n   - (b) Fatigue\\n   - (c) Chills\\n   - (d) All of the above\\n\\n2. **How is malaria primarily transmitted?**\\n   - (a) Through mosquito bites\\n   - (b) By drinking contaminated water\\n   - (c) By inhaling infected spores\\n   - (d) Through direct contact with an infected person\\n\\n3. **What is a simple yet effective way to prevent malaria?**\\n   - (a) Using mosquito nets while sleeping\\n   - (b) Taking antimalarial medications\\n   - (c) Getting vaccinated\\n   - (d) Wearing long sleeves and pants\\n\\n4. **Which type of malaria parasite is responsible for the most severe form of the disease?**\\n   - (a) Plasmodium falciparum\\n   - (b) Plasmodium vivax\\n   - (c) Plasmodium ovale\\n   - (d) Plasmodium malariae\\n\\n5. **In which part of the world is malaria most prevalent?**\\n   - (a) Developed countries\\n   - (b) Tropical and subtropical regions\\n   - (c) Polar regions\\n   - (d) Arid regions\\n\\n**Tone:**\\n\\nThe updated quiz questions use clear and concise language, making them more accessible to the public. The focus on prevention and common symptoms helps raise awareness about key aspects of malaria.'}"
+       " 'para': 'Malaria is a life-threatening parasitic disease transmitted by infected female Anopheles mosquitoes. It affects over 200 million people annually, predominantly in tropical and subtropical regions. The parasite, Plasmodium, invades red blood cells, causing symptoms that typically appear within 10-15 days after the bite. These symptoms include fever, chills, sweating, headache, muscle pain, and nausea. If left untreated, malaria can progress to severe complications such as cerebral malaria, respiratory distress, and organ failure.\\n\\nTreatment for malaria involves antimalarial medications, such as artemisinin-based combination therapies (ACTs), which are highly effective in clearing the infection. Early diagnosis and treatment are crucial to prevent severe illness and death. Prevention measures include using insecticide-treated mosquito nets, insect repellents, and antimalarial prophylaxis for travelers visiting endemic areas.\\n\\nMalaria is a significant global health concern, particularly in impoverished regions with limited access to healthcare. Ongoing research focuses on developing new antimalarial drugs, vaccines, and vector control strategies to combat the disease and reduce its impact on human health.',\n",
+       " 'quiz': '### RESPONSE_JSON\\n{\"1\": {\"mcq\": \"How is malaria primarily transmitted?\", \"options\": {\"a\": \"Through contaminated food and water\", \"b\": \"By infected female Anopheles mosquitoes\", \"c\": \"Through direct contact with infected individuals\", \"d\": \"All of the above\"}, \"correct\": \"b\"}, \"2\": {\"mcq\": \"Which of the following is NOT a symptom of malaria?\", \"options\": {\"a\": \"Fever\", \"b\": \"Cough\", \"c\": \"Muscle pain\", \"d\": \"Headache\"}, \"correct\": \"b\"}, \"3\": {\"mcq\": \"What is the most effective treatment for malaria?\", \"options\": {\"a\": \"Antibiotics\", \"b\": \"Antimalarial medications\", \"c\": \"Antiviral medications\", \"d\": \"Pain relievers\"}, \"correct\": \"b\"}, \"4\": {\"mcq\": \"Which of the following is a preventive measure against malaria?\", \"options\": {\"a\": \"Using insecticide-treated mosquito nets\", \"b\": \"Taking antimalarial prophylaxis\", \"c\": \"Wearing long sleeves and pants\", \"d\": \"All of the above\"}, \"correct\": \"d\"}, \"5\": {\"mcq\": \"In which regions of the world is malaria most prevalent?\", \"options\": {\"a\": \"Tropical and subtropical regions\", \"b\": \"Temperate regions\", \"c\": \"Polar regions\", \"d\": \"All of the above\"}, \"correct\": \"a\"}}',\n",
+       " 'review': '**Quality Analysis:**\\n\\nThe quiz covers basic information on malaria transmission, symptoms, treatment, and prevention. However, it lacks depth and does not provide comprehensive or up-to-date information.\\n\\n**Updated Quiz Questions:**\\n\\n1. How is malaria primarily transmitted?\\n   - (a) Through the bite of an infected female Anopheles mosquito\\n   - (b) By contact with contaminated water or soil\\n   - (c) Through blood transfusions or organ transplants\\n   - (d) All of the above\\n\\n2. What are the classic symptoms of malaria?\\n   - (a) Fever, chills, and sweating\\n   - (b) Headache, muscle pain, and nausea\\n   - (c) Vomiting, diarrhea, and abdominal pain\\n   - (d) All of the above\\n\\n3. What is the first-line treatment for uncomplicated malaria?\\n   - (a) Chloroquine\\n   - (b) Artemisinin-based combination therapies (ACTs)\\n   - (c) Quinine\\n   - (d) Antibiotics\\n\\n4. What is the most effective way to prevent malaria?\\n   - (a) Using insecticide-treated mosquito nets\\n   - (b) Taking antimalarial prophylaxis\\n   - (c) Wearing long sleeves and pants in malaria-prone areas\\n   - (d) All of the above\\n\\n5. Which of the following regions is most affected by malaria?\\n   - (a) Sub-Saharan Africa\\n   - (b) Southeast Asia\\n   - (c) Central and South America\\n   - (d) All of the above'}"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
